--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-  <meta property='og:type' content='website'>
-  <meta property='og:title' content='WebデザイナーTARO YAMADA ポートフォリオ'>
-  <meta property='og:url' content='URLが入る'>
-  <meta property='og:description' content='Webデザイナー TARO YAMADAのポートフォリオサイトです！'>
+  <meta property='og:type' content='programmer'>
+  <meta property='og:title' content='フリーランスエンジニア shadowkrr ポートフォリオ'>
+  <meta property='og:url' content='https://shadowkrr.github.io/portfolio/'>
+  <meta property='og:description' content='フリーランスエンジニア shadowkrrのポートフォリオサイトです！'>
   <meta property="og:image" content="img/ogp.png">
-  <meta name="description" content="Webデザイナー TARO YAMADAのポートフォリオサイトです！" />
-  <title>Webデザイナー TARO YAMADA ポートフォリオ</title>
+  <meta name="description" content="フリーランスエンジニア shadowkrrのポートフォリオサイトです！" />
+  <title>フリーランスエンジニア shadowkrr ポートフォリオ</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
   <link href="css/reset.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/photoswipe/photoswipe.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/photoswipe/default-skin/default-skin.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="img/favicon.ico" />
-  <link rel=”canonical” href=”URLが入る” />
+  <link rel=”canonical” href=”https://shadowkrr.github.io/portfolio/” />
 </head>
 
 <body>
@@ -33,7 +33,7 @@
     <header id="header">
       <div class="inner">
         <h1 class="logo">
-          <div class="logo-title">TARO YAMADA</div>
+          <div class="logo-title">SHADOWKRR</div>
           <div class="logo-desc">PORTFOLIO</div>
         </h1>
       </div>
@@ -45,23 +45,23 @@
             <h2 class="section-title">WORKS</h2>
             <div class="section-intro">
               <div class="section-text">
-                Web（デザインとコーディング）制作の記録です。<br class="pc">デザイン練習用の架空サイト（ファーストビューのみ）も含んでおります。
+                プログラム制作の記録です。<br class="pc">趣味で開発しているプログラムも含んでおります。
               </div>
             </div>
           </div>
           <div class="section-body card-wrapper my-gallery">
             <div class="card">
-              <a href="img/works/company.jpg" data-size="960x720" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/company.jpg" alt="" />
+              <a href="img/works/shachibook.png" data-size="960x720" class="card-image hover-action-01">
+                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/shachibook.png" alt="" />
               </a>
               <div class="card-caption">
-                <div class="card-caption-title">サイト名が入る</div>
-                <div class="card-caption-info">Design / Coding(Responsive) / WordPress</div>
-                <div class="card-caption-url"><a class="url-link" href="https://yahoo.co.jp" target="_blank">Link</a>
+                <div class="card-caption-title">しゃちぶっく</div>
+                <div class="card-caption-info">Program / Coding(Responsive) / iOS App</div>
+                <div class="card-caption-url"><a class="url-link" href="https://shachibook.fun" target="_blank">Link</a>
                 </div>
               </div>
             </div>
-            <div class="card">
+            <!-- <div class="card">
               <a href="img/works/hairsalon.jpg" data-size="960x720" class="card-image hover-action-01">
                 <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/hairsalon.jpg" alt="" />
               </a>
@@ -107,7 +107,7 @@
                 <div class="card-caption-title">サイト名が入る</div>
                 <div class="card-caption-info">Design</div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
@@ -261,12 +261,12 @@
           <div class="section-body contact-wrapper">
             <div class="contact-list">
               <ul>
-                <li><a href="https://twitter.com/" target="_blank"><img src="img/contact/icon_tw.png" alt=""></a>
+                <li><a href="https://twitter.com/syachi_kagechi" target="_blank"><img src="img/contact/icon_tw.png" alt=""></a>
                 </li>
-                <li><a href="https://www.facebook.com/" target="_blank"><img src="img/contact/icon_fb.png" alt=""></a>
+                <li><a href="https://github.com/shadowkrr" target="_blank"><img src="img/contact/icon_github.png" alt=""></a>
                 </li>
               </ul>
-              <div class="contact-other">xxxxxx@gmail.com</div>
+              <div class="contact-other">shadowkrr @ gmail.com</div>
             </div>
           </div>
         </div>
@@ -279,7 +279,7 @@
         </div>
       </div>
       <div class="inner">
-        <div class="copyright">Copyright&copy;TARO YAMADA. All Rights Reserved.</>
+        <div class="copyright">Copyright&copy;shadowkrr. All Rights Reserved.</>
         </div>
     </footer>
   </div>
