--- a/index.html
+++ b/index.html
@@ -164,21 +164,21 @@
           <div class="section-title-area">
             <h2 class="section-title">SKILL</h2>
             <div class="section-intro">
-              未経験ですが頑張ります！
+              主観的なスキルレベルです。
             </div>
           </div>
           <div class="section-body card-wrapper">
             <div class="card">
               <div class="skill-icon">
-                <img src="img/skill/icon_skill.png" alt="">
+                <img src="img/skill/icon_html5.png" alt="">
               </div>
               <div class="skill-desc">
                 <h3 class="skill-desc-title">HTML5/CSS3</h3>
                 <div class="rating">
                   <div class="rate rate4"></div>
                 </div>
-                <div class="section-text">
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                <!-- <div class="section-text">
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div> -->
               </div>
             </div>
             <div class="card">
@@ -190,8 +190,8 @@
                 <div class="rating">
                   <div class="rate rate3"></div>
                 </div>
-                <div class="section-text">
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                <!-- <div class="section-text">
+                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div> -->
               </div>
             </div>
             <div class="card">
