--- a/index.html
+++ b/index.html
@@ -116,24 +116,38 @@
           <div class="section-title-area">
             <h2 class="section-title">FEATURE</h2>
             <div class="section-intro">
-              1サイトの解説
+              しゃちぶっくの解説
             </div>
           </div>
           <div class="section-body">
             <div class="section-image">
-              <a href="https://webdesigner-go.com/" class="hover-action-01" target="_blank"><img
-                  src="img/feature/feature.jpg" alt=""></a>
+              <a href="https://shachibook.fun/" class="hover-action-01" target="_blank"><img
+                  src="img/feature/feature_shachibook.png" alt="しゃちぶっく"></a>
             </div>
             <div class="section-desc">
               <div class="section-text">
-                <span class="text-bold">サイト名：</span><br>サイト名が入る<br><a href="#"
-                  target="_blank">https://●●●.com</a><br><br>
-                <span class="text-bold">担当：</span><br>Design / Coding (Responsive) / WordPress /
-                Writing<br>
+                <span class="text-bold">サイト名：</span><br>しゃちぶっく<br><a href="#"
+                  target="_blank">https://shachibook.fun</a><br><br>
+                <span class="text-bold">担当：</span>全て<br>
                 <br>
-                <span
-                  class="text-bold">コメント：</span><br>テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br><br>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br><br>
-                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br><br>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                <span class="text-bold">コメント：</span>
+                  <br>TEAM SHACHIの最新情報が一括で管理できるその名も「しゃちぶっく」
+                  <br>Twitter, Instagram, Blog等のオフィシャル情報がこれ一つでまとめて確認できます。
+                  <br>最新の情報が更新されるとすぐに通知でお知らせします。
+                  <br>
+                  <br>しゃちぶっくは「非公式」のアプリケーションとなります。
+                  <br>----------------------------------------------------
+                  <br>** 対応iOS **
+                  <br>----------------------------------------------------
+                  <br>しゃちぶっくはiOS9.1以上の対応となります。
+                  <br>----------------------------------------------------
+                  <br>** 対応端末 **
+                  <br>----------------------------------------------------
+                  <br>iOS9.1以上がインストールされたiphoneもしくはipad端末でご利用が可能です。
+                  <br>----------------------------------------------------
+                  <br>** サポート・お問い合わせ **
+                  <br>----------------------------------------------------
+                  <br>お問い合わせがある場合はアプリ内にあるお問い合わせよりメールください。なおバグや不具合を発見された方はメールにて直接ご連絡ください。できる限り対応いたします。
               </div>
             </div>
           </div>
@@ -144,16 +158,26 @@
           <div class="section-title-area">
             <h2 class="section-title">ABOUT</h2>
             <div class="section-intro">
-              こんにちは！
+              shadowkrr
             </div>
           </div>
           <div class="section-body">
             <div class="section-image">
-              <img class="lazyload fadein" data-src="img/about/profile.jpg" alt="">
+              <img class="lazyload fadein" data-src="img/about/profile.png" alt="">
             </div>
             <div class="section-desc">
               <div class="section-text">
-                テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br><br>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                <p>高校生の頃からプログラミングを学び始めました。</p>
+                <p>主にWeb系のお仕事を中心にフリーランスで活動しています。</p>
+                <p>開発言語はPHPが多いですが、最近はSPAのVue.js(フロント)とGO(サーバ)でお仕事しています。</p>
+                <p>ご感想、お仕事のご依頼はSNSまたメールよりお気軽にお送りください。</p>
+              </div>
+              <br>
+              <div class="section-text">
+                <p>I started learning programming when I was in high school.</p>
+                <p>I am active as a freelancer, mainly focusing on web-related work.</p>
+                <p>Most of the development languages ​​are PHP, but recently I work with SPA Vue.js (front) and GO (server).</p>
+                <p>Please feel free to send your comments and job requests via SNS or email.</p>
               </div>
             </div>
           </div>
