--- a/index.html
+++ b/index.html
@@ -201,75 +201,151 @@
                 <div class="rating">
                   <div class="rate rate4"></div>
                 </div>
-                <!-- <div class="section-text">
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div> -->
+                <div class="section-text"></div>
               </div>
             </div>
             <div class="card">
               <div class="skill-icon">
-                <img src="img/skill/icon_skill.png" alt="">
+                <img src="img/skill/icon_javascript.png" alt="">
               </div>
               <div class="skill-desc">
                 <h3 class="skill-desc-title">JavaScript</h3>
                 <div class="rating">
-                  <div class="rate rate3"></div>
+                  <div class="rate rate4"></div>
                 </div>
-                <!-- <div class="section-text">
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div> -->
+                <div class="section-text"></div>
               </div>
             </div>
             <div class="card">
               <div class="skill-icon">
-                <img src="img/skill/icon_skill.png" alt="">
+                <img src="img/skill/icon_php.png" alt="">
               </div>
               <div class="skill-desc">
-                <h3 class="skill-desc-title">WordPress</h3>
+                <h3 class="skill-desc-title">PHP</h3>
+                <div class="rating">
+                  <div class="rate rate5"></div>
+                </div>
+                <div class="section-text"></div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="skill-icon">
+                <img src="img/skill/icon_python.png" alt="">
+              </div>
+              <div class="skill-desc">
+                <h3 class="skill-desc-title">Python</h3>
                 <div class="rating">
                   <div class="rate rate4"></div>
                 </div>
-                <div class="section-text">
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                <div class="section-text"></div>
               </div>
             </div>
             <div class="card">
               <div class="skill-icon">
-                <img src="img/skill/icon_skill.png" alt="">
+                <img src="img/skill/icon_swift.png" alt="">
               </div>
               <div class="skill-desc">
-                <h3 class="skill-desc-title">Photoshop</h3>
+                <h3 class="skill-desc-title">Swift</h3>
                 <div class="rating">
                   <div class="rate rate4"></div>
                 </div>
-                <div class="section-text">
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+                <div class="section-text"></div>
               </div>
             </div>
             <div class="card">
               <div class="skill-icon">
-                <img src="img/skill/icon_skill.png" alt="">
+                <img src="img/skill/icon_go.png" alt="">
               </div>
               <div class="skill-desc">
-                <h3 class="skill-desc-title">Illustrator</h3>
+                <h3 class="skill-desc-title">Go</h3>
                 <div class="rating">
-                  <div class="rate rate3"></div>
+                  <div class="rate rate4"></div>
                 </div>
-                <div class="section-text">
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                </div>
+                <div class="section-text"></div>
               </div>
             </div>
             <div class="card">
               <div class="skill-icon">
-                <img src="img/skill/icon_skill.png" alt="">
+                <img src="img/skill/icon_java.png" alt="">
               </div>
               <div class="skill-desc">
-                <h3 class="skill-desc-title">XD</h3>
+                <h3 class="skill-desc-title">Java</h3>
                 <div class="rating">
                   <div class="rate rate3"></div>
                 </div>
-                <div class="section-text">
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                <div class="section-text"></div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="skill-icon">
+                <img src="img/skill/icon_typescript.png" alt="">
+              </div>
+              <div class="skill-desc">
+                <h3 class="skill-desc-title">TypeScript</h3>
+                <div class="rating">
+                  <div class="rate rate4"></div>
                 </div>
+                <div class="section-text"></div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="skill-icon">
+                <img src="img/skill/icon_ruby.png" alt="">
+              </div>
+              <div class="skill-desc">
+                <h3 class="skill-desc-title">Ruby</h3>
+                <div class="rating">
+                  <div class="rate rate3"></div>
+                </div>
+                <div class="section-text"></div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="skill-icon">
+                <img src="img/skill/icon_perl.png" alt="">
+              </div>
+              <div class="skill-desc">
+                <h3 class="skill-desc-title">Perl</h3>
+                <div class="rating">
+                  <div class="rate rate3"></div>
+                </div>
+                <div class="section-text"></div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="skill-icon">
+                <img src="img/skill/icon_kotlin.png" alt="">
+              </div>
+              <div class="skill-desc">
+                <h3 class="skill-desc-title">Kotlin</h3>
+                <div class="rating">
+                  <div class="rate rate3"></div>
+                </div>
+                <div class="section-text"></div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="skill-icon">
+                <img src="img/skill/icon_cplus.png" alt="">
+              </div>
+              <div class="skill-desc">
+                <h3 class="skill-desc-title">C/C++</h3>
+                <div class="rating">
+                  <div class="rate rate3"></div>
+                </div>
+                <div class="section-text"></div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="skill-icon">
+                <img src="img/skill/icon_csharp.png" alt="">
+              </div>
+              <div class="skill-desc">
+                <h3 class="skill-desc-title">C#</h3>
+                <div class="rating">
+                  <div class="rate rate3"></div>
+                </div>
+                <div class="section-text"></div>
               </div>
             </div>
           </div>
