--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2 class="section-title">WORKS</h2>
             <div class="section-intro">
               <div class="section-text">
-                プログラム制作の記録です。<br class="pc">趣味で開発しているプログラムも含んでおります。
+                プログラムや制作物の一覧です。<br class="pc">主に趣味で開発している物を含んでおります。
               </div>
             </div>
           </div>
@@ -61,53 +61,39 @@
                 </div>
               </div>
             </div>
-            <!-- <div class="card">
-              <a href="img/works/hairsalon.jpg" data-size="960x720" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/hairsalon.jpg" alt="" />
+            <div class="card">
+              <a href="img/works/github.png" data-size="960x720" class="card-image hover-action-01">
+                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/github.png" alt="" />
               </a>
               <div class="card-caption">
-                <div class="card-caption-title">サイト名が入る</div>
-                <div class="card-caption-info">Design / Coding(Responsive) </div>
-                <div class="card-caption-url"><a class="url-link" href="https://yahoo.co.jp" target="_blank">Link</a>
+                <div class="card-caption-title">Github</div>
+                <div class="card-caption-info">Program Open Source</div>
+                <div class="card-caption-url"><a class="url-link" href="https://github.com/shadowkrr" target="_blank">Link</a>
                 </div>
               </div>
             </div>
             <div class="card">
-              <a href="img/works/girly.jpg" data-size="960x720" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/girly.jpg" alt="" />
+              <a href="img/works/blog.png" data-size="960x720" class="card-image hover-action-01">
+                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/blog.png" alt="" />
               </a>
               <div class="card-caption">
-                <div class="card-caption-title">サイト名が入る</div>
-                <div class="card-caption-info">Design</div>
+                <div class="card-caption-title">雑記まみむメモ</div>
+                <div class="card-caption-info">Blog</div>
+                <div class="card-caption-url"><a class="url-link" href="http://shadowkrr.hateblo.jp" target="_blank">Link</a>
+                </div>
               </div>
             </div>
             <div class="card">
-              <a href="img/works/school.jpg" data-size="960x720" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/school.jpg" alt="" />
+              <a href="img/works/speaker_deck.png" data-size="960x720" class="card-image hover-action-01">
+                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/speaker_deck.png" alt="" />
               </a>
               <div class="card-caption">
-                <div class="card-caption-title">サイト名が入る</div>
-                <div class="card-caption-info">Design</div>
+                <div class="card-caption-title">SpeakerDeck</div>
+                <div class="card-caption-info">Speakerdeck</div>
+                <div class="card-caption-url"><a class="url-link" href="https://speakerdeck.com/shadowkrr" target="_blank">Link</a>
+                </div>
               </div>
             </div>
-            <div class="card">
-              <a href="img/works/game.jpg" data-size="960x720" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/game.jpg" alt="" />
-              </a>
-              <div class="card-caption">
-                <div class="card-caption-title">サイト名が入る</div>
-                <div class="card-caption-info">Design</div>
-              </div>
-            </div>
-            <div class="card">
-              <a href="img/works/fashion.jpg" data-size="960x720" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/fashion.jpg" alt="" />
-              </a>
-              <div class="card-caption">
-                <div class="card-caption-title">サイト名が入る</div>
-                <div class="card-caption-info">Design</div>
-              </div>
-            </div> -->
           </div>
         </div>
       </section>
