--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <div class="card-caption">
                 <div class="card-caption-title">しゃちぶっく</div>
                 <div class="card-caption-info">Program / Coding(Responsive) / iOS App</div>
-                <div class="card-caption-url"><a class="url-link" href="https://shachibook.fun" target="_blank">Link</a>
+                <div class="card-caption-url"><a class="url-link" href="https://shachibook.website" target="_blank">Link</a>
                 </div>
               </div>
             </div>
@@ -107,13 +107,13 @@
           </div>
           <div class="section-body">
             <div class="section-image">
-              <a href="https://shachibook.fun/" class="hover-action-01" target="_blank"><img
+              <a href="https://shachibook.website/" class="hover-action-01" target="_blank"><img
                   src="img/feature/feature_shachibook.png" alt="しゃちぶっく"></a>
             </div>
             <div class="section-desc">
               <div class="section-text">
                 <span class="text-bold">サイト名：</span><br>しゃちぶっく<br><a href="#"
-                  target="_blank">https://shachibook.fun</a><br><br>
+                  target="_blank">https://shachibook.website</a><br><br>
                 <span class="text-bold">担当：</span>全て<br>
                 <br>
                 <span class="text-bold">コメント：</span>
