--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
             <div class="section-desc">
               <div class="section-text">
-                <span class="text-bold">サイト名：</span><br>しゃちぶっく<br><a href="#"
+                <span class="text-bold">サイト名：</span><br>しゃちぶっく<br><a href="https://shachibook.website"
                   target="_blank">https://shachibook.website</a><br><br>
                 <span class="text-bold">担当：</span>全て<br>
                 <br>
