--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
               </div>
             </div>
-            <div class="card">
+            <!-- <div class="card">
               <a href="img/works/speaker_deck.png" data-size="960x720" class="card-image hover-action-01">
                 <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/speaker_deck.png" alt="" />
               </a>
@@ -93,7 +93,7 @@
                 <div class="card-caption-url"><a class="url-link" href="https://speakerdeck.com/shadowkrr" target="_blank">Link</a>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
@@ -149,7 +149,7 @@
           </div>
           <div class="section-body">
             <div class="section-image">
-              <img class="lazyload fadein" data-src="img/about/profile.png" alt="">
+              <!-- <img class="lazyload fadein" data-src="img/about/profile.png" alt=""> -->
             </div>
             <div class="section-desc">
               <div class="section-text">
